# asterorm

./: .clang-format  .clang-tidy  FEATURE_PLAN.md  README.md  ROADMAP.md  compose.yaml  justfile  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: AsterORMConfig.cmake  AsterORMConfigVersion.cmake
examples/: meson.build  quickstart.cpp
include/asterorm/: entity_traits.hpp  migration.hpp  repository.hpp  session.hpp
include/asterorm/clickhouse/: connection.hpp  driver.hpp  result.hpp  types.hpp
include/asterorm/clickhouse/detail/: params.hpp
include/asterorm/core/: codecs.hpp  entity_traits.hpp  error.hpp  migration.hpp  observer.hpp  repository.hpp  result.hpp  session.hpp  types.hpp
include/asterorm/pool/: connection_pool.hpp
include/asterorm/postgres/: connection.hpp  copy.hpp  driver.hpp  result.hpp  types.hpp
include/asterorm/sql/: ast.hpp  compiler.hpp  typed.hpp  typed_query.hpp
include/asterorm/sqlite/: connection.hpp  driver.hpp  result.hpp
src/: meson.build
src/clickhouse/: codecs.cpp  connection.cpp  driver.cpp  result.cpp
src/core/: error.cpp  result.cpp  session.cpp
src/crud/: repository.cpp
src/pool/: connection_pool.cpp
src/postgres/: connection.cpp  driver.cpp  result.cpp
src/sql/: ast.cpp  compiler.cpp
src/sqlite/: connection.cpp  driver.cpp  result.cpp
subprojects/: clickhouse-cpp.wrap  postgresql.wrap
tests/: meson.build
tests/integration/: test_arrays_copy.cpp  test_crud.cpp  test_extras.cpp  test_migrations.cpp  test_pool.cpp  test_sql.cpp  test_sqlite_crud.cpp  test_transactions.cpp
tests/unit/: test_ast.cpp  test_clickhouse.cpp  test_codecs.cpp  test_core.cpp  test_entity_traits.cpp  test_pool.cpp  test_transactions.cpp  test_typed_dsl.cpp
tools/: run_clang_format.py  run_clang_tidy.py
